# rusty-mips

./: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  README.md  \  package-lock.json  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  preload.js  renderer.js
native/: Cargo.toml  package.json
native/src/: arch.rs  lib.rs  main.rs
native/src/architecture/: mod.rs  pipes.rs  processor.rs
native/src/architecture/stage/: control_unit.rs  ex_stage.rs  forward.rs  hazard.rs  id_ex.rs  id_stage.rs  if_id.rs  if_stage.rs  mem_stage.rs  mod.rs  wb_stage.rs
native/src/architecture/units/: control_unit.rs  forward_unit.rs  function_unit.rs  mod.rs
native/src/assembler/: assemble.rs  error.rs  instruction.rs  mod.rs  segment.rs
native/src/component/: instruction.rs  mod.rs  register_name.rs
native/src/disassembler/: disassemble.rs
native/src/executor/: arch.rs  error.rs  executor_trait.rs  interpreter.rs  mod.rs
native/src/executor/jit/: dummy.rs  mod.rs  x64.rs
native/src/executor/pipeline/: debug.rs  info.rs  mod.rs  pipes.rs  processor.rs
native/src/executor/pipeline/stage/: ex_stage.rs  forward.rs  hazard.rs  id_stage.rs  if_stage.rs  mem_stage.rs  mod.rs  wb_stage.rs
native/src/executor/pipeline/units/: alu_unit.rs  control_unit.rs  forward_unit.rs  function_unit.rs  hazard_unit.rs  mod.rs
native/src/interpreter/: arch.rs  decode.rs  error.rs  mnemonic.rs  mod.rs
native/src/memory/: emptymem.rs  endian_mode.rs  fastmem_unix.rs  fastmem_windows.rs  mem.rs  memory_trait.rs  mod.rs  segment.rs  slowmem.rs
native/src/stage/: id_ex.rs  if_id.rs  mod.rs
native/src/webapi/: entrypoint.rs  looper.rs  mod.rs  state.rs  updates.rs  util.rs
public/: index.html  main.js  preload.js
src/: App.tsx  NativeLib.ts  bridge.d.ts  index.css  index.tsx  mylib.d.ts
src/components/: EditableRegisterValue.tsx  RadixValue.tsx  SvgPipeline.js  TemplateCode.ts
src/context/: NativeLibContext.tsx  ToastContext.tsx
src/pages/: AssemblyPage.tsx  DisassemblyPage.tsx  PipelinePage.tsx
src/views/: Disassembly.tsx  EditRegisterValueModal.tsx  EndianSwitch.tsx  MemoryViewer.tsx  Registers.tsx
