[package]
name = "rusty-mips-native"
version = "0.1.0"
description = "Native module of rusty-mips, a simple mips simulator"
authors = ["jsonmona", "SkuldNorniern"]
license = ""
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "1.0.0-alpha"
default-features = false
features = ["napi-6"]

[dependencies]
thiserror = "1.0.37"
byteorder = "1.4.3"
