[package]
name = "rusty-mips-native"
version = "0.1.0"
description = "Native module of rusty-mips, a simple mips simulator"
authors = ["jsonmona", "SkuldNorniern"]
license = ""
edition = "2018"
resolver = "2"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
snafu = { version="0.7.3", features=["backtraces"]}
byteorder = "1.4.3"
lazy_static = "1.4.0"
regex = "1.7.0"
parking_lot = "0.12.1"
cfg-if = "1.0.0"
lockfree = "0.5.1"
dynasmrt = "1.2.3"

[dependencies.neon]
version = "1.0.0-alpha"
default-features = false
features = ["napi-6"]

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rayon = "1.6.1"
