[package]
name = "rusty-mips-native"
version = "0.1.0"
description = "Native module of rusty-mips, a simple mips simulator"
authors = ["jsonmona", "SkuldNorniern"]
license = ""
edition = "2018"
resolver = "2"
exclude = ["index.node"]

[profile.release]
debug = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
cfg-if = "1.0.0"
dynasmrt = "1.2.3"
lazy_static = "1.4.0"
lockfree = "0.5.1"
parking_lot = "0.12.1"
regex = "1.7.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = { version="0.7.3", features=["backtraces"]}

[dev-dependencies]
rayon = "1.6.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies.neon]
version = "1.0.0-alpha"
default-features = false
features = ["napi-6"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
